css/main.css
@import "unite-gallery.css";
@font-face {
	font-family: 'quattrocento';
	src: url(../fonts/quattrocentosans-regular.ttf) format('truetype');
	src: url(../fonts/quattrocentosans-regular.woff) format('woff'), url(../fonts/quattrocentosans-regular.eot);
}
@font-face {
	font-family: 'black-bamboo';
	src: url(../fonts/black-bamboo.ttf) format('truetype');
	/* The .eot & .woff files caused the font to render improperly. In IE fonts will fall back to quattrocento instead*/
}
/* ========== GLOBAL STYLES AND RESET RULES ========== */
* {
	margin: 0;
	padding: 0;
	border: 0;
    box-sizing: border-box;
}
article, aside, details, figcaption, figure, footer, header, main, nav, section, summary, input, select, textarea, label {
    display:block;
}
body {
	background-color: rgb(2,10,16);
	position: relative;
}
/* ========== END GLOBAL STYLES AND RESET RULES ========== */
/* ========== Typography ========== */
body {
    font-family: 'quattrocento', sans-serif;
    color: rgb(254,254,254);
    line-height: 1.4rem
}
h1,
h2,
.home_action_text,
.home_cta {
    font-family: 'black-bamboo', 'quattrocento', sans-serif;
    color: rgb(244,182,61);
}
h2,
h3 {
	font-size: 1.5rem;
	margin-bottom: 1.5rem;
}
p {
	font-size: 1.1rem;
}
h2 a {
	text-decoration: none;
}
/* ========== END Typography ========== */
/* ========== Basic Layout and Spacing ========== */
/* Set up with the base layout immediately followed by any exceptions to the base layout */
section {
	margin: 2.5rem 0 1rem;
}
section:first-child {
    padding-top: 2.5rem; /* Prevents hamburger menu from covering text on smooth scroll */
}
main section {
    margin: 0;
}
main,
aside {
    margin: 1rem;
}
blockquote {
    margin: 2rem;
    border-left: solid 7px rgb(21, 41,22);
}
blockquote * {
    margin-left: 2rem;
}
article + article {
    margin-top: 3rem;
}
h1 {
    margin: 1.6rem;
}
main h1 {
	margin-left: 0;
}
p + p,
form,
input#submit,
.home_cta_buttons {
    margin-top: 1rem;
}
ul {
	margin: 1% 0;
}
ol {
	margin: 0 3% 3%;
}
ol li {
	margin: 0.25% .5%;
}
input[type="text"],
input[type="tel"],
input[type="email"],
input[type="search"],
select,
textarea {
	width: 100%;
	padding: 0.75rem;
	margin-bottom: 1rem;
    box-shadow: inset 2px 3px 5px rgba(2, 10, 16, 0.3);
}
.home h1,
.hide-all,
.hide {
	display: none;
}
img {
	width: 100%;
}
/* ========== END Basic Layout and Spacing ========== */
/* ========== Links Styles========== */
a:link {
	color: rgb(244,182,61);
}
a:hover {
    color: rgb(254,254,254);
}
a:visited,
a:active {
	color: rgba(244,182,61,.8);
}
/* ========== END Link Styles ========== */
/* ========== Button Styles ========== */
button,
input#submit,
input[type="button"] {
    padding: 0.5rem;
}
button,
input#submit,
input[type="button"],
.button a:link,
.button a:visited {
    padding: 0.5rem;
    border-radius: 7px;
    border: solid 3px rgb(244, 182, 61);
    background: none;
    color: rgb(244, 182, 61);
    font-family: 'black-bamboo','quattrocento', sans-serif;
    transition: color 1s border 1s filter 0.5s;
    text-align: center;
    display:block;
}
button:hover,
input#submit:hover,
input[type="button"]:hover,
.button a:hover {
    filter: invert(30%);
    transition: filter 0.25s;
}
.button a:active,
input#submit:active,
input[type="button"]:active,
button:active {
    color: #000;
    border-color: rgb(2, 10, 16);
    filter: drop-shadow(0 0 5px #fff);
    transition: color 1s border 1s filter 0.5s;
}
.button a:link,
.button a:visited,
.button a:active {
    text-decoration: none;
}
/* ========== END Button Styles ========== */
/* ========== Nav Styles ========== */
nav ul {
	width: 100%;
	text-align: center;
	padding: 1% 0;
	margin: 0;
}
nav ul li {
	display: inline;
	padding: 0 2%;
}
nav ul li a:link,
nav ul li a:visited {
	color: rgb(244,182,61);
	text-decoration: none;
}
nav ul li a:hover,
nav ul li a:active {
	color: rgb(254,254,254);
    text-decoration: underline;
}
.main-menu {
    display: flex;
    align-items: center;
    justify-content: center;
}
nav {
    width: 60%;
}
/* ========== END Nav Styles ========== */
/* ======== Hamburger Menu Styles ========*/
.hamburger,
.hamburger__close {
	display: none;
}
.mobile-nav_display ul {
  width: 75%;
  margin: auto;
  -webkit-padding-start: 0;
}
@media (max-width: 700px) {
	body {
		overflow-x: hidden;
	}
	.hamburger,
	.hamburger__close {
	  width: 2rem;
      height: 2rem;
      padding: 1rem;
	  position: fixed;
      top: 0.5rem;
      right: 0.5rem;
	  bottom: 1rem;
	  cursor: pointer;
	  display: block;
	  z-index: 9981;
      border-radius: 50%;
      background: rgba(2, 10, 16, 0.6);
      animation: spin-in 1s;
      box-sizing: content-box; /* Box-sizing will make it disappear */
	}
	.nav_hide {
	  display: none;
	}
	nav {
	  position: fixed;
	  width: 100%;
	  height: 100vh;
	  background-color: rgba(2,10, 16, 0.97);
	  top: 0;
	  z-index: 9980;
	  right: -105%;
	  opacity: 0;
	  transition: right 0.3s ease-in, opacity 0.25s ease-in;
	  display: block;
	}
	nav ul li {
	    display: block;
	    text-align: center;
		font-size: 1.2em;
        margin: 1em;
	}
	nav.mobile-nav_display {
	  right: 0 !important;
	  top: 0;
	  opacity: 1;
	  transition: right 0.3s ease-in, opacity 0.3s ease-in;
	  display: block;
	}
}
/* ======== END Hamburger Menu Styles ========*/
/* ========== Home Styles ========== */
section.splash p {
	width: 85%;
	margin: auto;
	text-align: center;
}
#container {
    margin: 1.5rem;
}
.home_call-to-action {
    width: 100%;
    position: absolute;
    top: calc(100vh - 8rem);
}
p.home_action_text a:link {
	text-decoration: none;
}
.home_action {
    width: 100%;
}
img.action {
	width: 8%;
	max-width: 40px;
}
img.thumb {
	max-width: 300px;
}
.logo {
	margin-top: 30%;
	width: 60%;
	max-width: 220px;
}
.bkg {
	background-image: url(../img/bkg.jpg);
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	min-height: 100vh;
    position: relative;
}
/* ... */

